--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="ket_hadir">Anda sudah absen hari ini!</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="crc">2978708718</string>
+    <string name="title_activity_maps">MapsActivity</string>
+    <string name="google_maps_api">AIzaSyBAZ1tLbqimqzntKJnJYQY1g_tynUgtM9w</string>
 </resources>
